[package]
edition = "2021"
name = "rp2350-isotp-ble-bridge"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[dependencies]
# embassy
embassy-futures = "0.1.1"
embassy-sync = "0.6.2"
embassy-executor = { version = "*", features = ["task-arena-size-98304", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-time = { version = "*", features = ["defmt", "defmt-timestamp-uptime"] }
# platform
embassy-rp = { version = "*", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp235xa", "binary-info"] }
cortex-m = "0.7.6"
cortex-m-rt = "0.7.0"
cyw43 = { version = "*", features = ["defmt", "bluetooth"] }
cyw43-pio = { version = "*", features = ["defmt"] }
# bluetooth
bt-hci = { version = "*", features = ["embassy-time", "uuid", "defmt"] }
trouble-host = { version = "*", features = ["defmt"] }
# logging
defmt = "0.3"
panic-probe = { version = "0.3", features = ["print-defmt"] }
defmt-serial = "0.10.0"
# static
static_cell = "2.1"
# atomic
portable-atomic = "1.11.0"
# can2040
can2040_rs = { path = "../can2040_rs" }
# alloc
heapless = "0.8.0"
# critical section
critical-section = "1.2.0"
fixed = "1.29.0"

[patch.crates-io]
embassy-rp = { git = "https://github.com/embassy-rs/embassy", rev = "17301c00e986c5b8536435ea31ebf5aaf13aed17" }
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "17301c00e986c5b8536435ea31ebf5aaf13aed17" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "17301c00e986c5b8536435ea31ebf5aaf13aed17" }
cyw43 = { git = "https://github.com/embassy-rs/embassy", rev = "17301c00e986c5b8536435ea31ebf5aaf13aed17" }
cyw43-pio = { git = "https://github.com/embassy-rs/embassy", rev = "17301c00e986c5b8536435ea31ebf5aaf13aed17" }
bt-hci = { git = "https://github.com/embassy-rs/bt-hci", rev = "21ba1ce181c74e4abc9dd28b87b7214dde7c0483" }
trouble-host = { git = "https://github.com/embassy-rs/trouble", rev = "92841fcc8bb986368456239a7bbf25be2f709ec1" }

[features]
default = ["defmt"]
defmt = ["embassy-time/defmt", "embassy-rp/defmt", "cyw43/defmt", "bt-hci/defmt", "trouble-host/defmt", "panic-probe/print-defmt"]

[profile.release]
debug = 2

[profile.dev]
lto = true
opt-level = "z"
